Личный проект: начинаем готовить графику Подключение контентных изображений

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <div>
-      <a href="#"><img src="logo.svg" alt="Логотип компании" width="109" height="19"></a>
+      <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="109" height="19"></a>
       <form>
         <label for="search">Поиск</label>
         <input type="search" id="search" placeholder="Поиск:">
@@ -208,12 +208,12 @@
     </section>
     <section>
       <h2>Контакты</h2>
-      <a href="#"><img src="map.jpg" alt="Карта проезда" width="300" height="158"></a>
+      <a href="#"><img src="img/map.png" alt="Карта проезда" width="300" height="158"></a>
       <a href="#">Заблудились? Напишите нам!</a>
     </section>
   </main>
   <footer>
-    <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
+    <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="138" height="23"></a>
     <p>
       г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
     </p>
