--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <div>
-        <a href="index.html"><img src="logo.svg" alt="Логотип компании" width="109" height="19"></a>
+        <a href="index.html"><img src="img/logo.svg" alt="Логотип компании" width="109" height="19"></a>
         <form>
           <label for="search">Поиск</label>
           <input type="search" id="search" placeholder="Поиск:">
@@ -120,7 +120,7 @@
         <!-- К А Т А Л О Г -->
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <img src="img/Bosch3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -130,7 +130,7 @@
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <img src="img/Bosch6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
           <p>30500 Р.</p>
           <p>25500 Р.</p>
           <div>
@@ -140,7 +140,7 @@
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 2000</h3>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+          <img src="img/Bosch2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
           <p>12500 Р.</p>
           <div>
             <a href="#">Купить</a>
@@ -150,7 +150,7 @@
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <img src="img/Bosch3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -159,7 +159,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <img src="img/Bosch6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
@@ -170,7 +170,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+          <img src="img/Bosch2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
@@ -179,7 +179,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <img src="img/Bosch3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
@@ -190,7 +190,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <img src="img/Bosch6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
@@ -200,7 +200,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+          <img src="img/Bosch2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
@@ -229,7 +229,7 @@
       </section>
     </main>
     <footer>
-      <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
+      <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="138" height="23"></a>
       <p>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
       </p>
