Исправление ошибок: названия файлов, формат изображения карты

--- a/catalog.html
+++ b/catalog.html
@@ -119,8 +119,8 @@
         </div>
         <!-- К А Т А Л О Г -->
         <article>
-          <h3>Перфоратор BOSCH BFG 3000</h3>
-          <img src="img/Bosch3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -129,8 +129,8 @@
           </div>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src="img/Bosch6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+          <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 6000</h3>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
           <div>
@@ -139,8 +139,8 @@
           </div>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 2000</h3>
-          <img src="img/Bosch2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+          <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
             <a href="#">Купить</a>
@@ -149,8 +149,8 @@
           <div>New</div>
         </article>
         <article>
-          <h3>Перфоратор BOSCH BFG 3000</h3>
-          <img src="img/Bosch3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+          <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -159,8 +159,8 @@
           </div>
         </article>
         <article>
-          <img src="img/Bosch6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 6000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -170,8 +170,8 @@
           </div>
         </article>
         <article>
-          <img src="img/Bosch2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
             <a href="#">Купить</a>
@@ -179,8 +179,8 @@
           </div>
         </article>
         <article>
-          <img src="img/Bosch3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 3000</h3>
+          <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -190,8 +190,8 @@
           </div>
         </article>
         <article>
-          <img src="img/Bosch6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 6000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -200,8 +200,8 @@
           </div>
         </article>
         <article>
-          <img src="img/Bosch2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
             <a href="#">Купить</a>
@@ -229,7 +229,7 @@
       </section>
     </main>
     <footer>
-      <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="138" height="23"></a>
+      <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
       <p>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
       </p>
