--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <section>
       <h2>Товары и услуги</h2>
       <div>
+        <div>New</div>
         <h3>Материалы</h3>
         <a href="#">На любой вкус</a>
       </div>
-      <div>New</div>
       <div>
         <h3>Инструмент</h3>
         <a href="#">На все случаи</a>
@@ -95,8 +95,8 @@
       </div>
       <div>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 9000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 9000</h3>
+          <img src="item1.jpg" alt="Перфоратор Bosch BFG 9000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 9000</h3>
           <p>32500 Р.</p>
           <p>25500 Р.</p>
           <div>
@@ -105,8 +105,8 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 3000</h3>
+          <img src="item1.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
           <div>
@@ -115,8 +115,8 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <img src="item1.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 6000</h3>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
           <div>
@@ -125,8 +125,8 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="item1.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
+          <h3>Перфоратор Bosch BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
             <a href="#">Купить</a>
@@ -208,7 +208,7 @@
     </section>
     <section>
       <h2>Контакты</h2>
-      <a href="#"><img src="img/map.png" alt="Карта проезда" width="300" height="158"></a>
+      <a href="#"><img src="img/map.jpg" alt="Карта проезда" width="300" height="158"></a>
       <a href="#">Заблудились? Напишите нам!</a>
     </section>
   </main>
