7. Личный проект: продолжаем подготовку графики

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
       <div>
         <article>
-          <img src="item1.jpg" alt="Перфоратор Bosch BFG 9000" width="218" height="170">
+          <img src="img/b9000.jpg" alt="Перфоратор Bosch BFG 9000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 9000</h3>
           <p>32500 Р.</p>
           <p>25500 Р.</p>
@@ -105,7 +105,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
+          <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
@@ -115,7 +115,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
+          <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 6000</h3>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
@@ -125,7 +125,7 @@
           </div>
         </article>
         <article>
-          <img src="item1.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
+          <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 2000</h3>
           <p>12500 Р.</p>
           <div>
@@ -144,14 +144,14 @@
       </div>
       <div>
         <ul>
-          <li><a href="#"><img src="x.jpg" alt="Bosch" width="126" height="137"></a></li>
-          <li><a href="#"><img src="x.jpg" alt="Makita" width="123" height="40"></a></li>
-          <li><a href="#"><img src="x.jpg" alt="DeWALT" width="146" height="44"></a></li>
-          <li><a href="#"><img src="x.jpg" alt="Интерскол" width="200" height="88"></a></li>
-          <li><a href="#"><img src="x.jpg" alt="Hitachi" width="169" height="31"></a></li>
-          <li><a href="#"><img src="x.jpg" alt="LG" width="121" height="73"></a></li>
-          <li><a href="#"><img src="x.jpg" alt="AEG" width="151" height="96"></a></li>
-          <li><a href="#"><img src="x.jpg" alt="Metabo" width="204" height="69"></a></li>
+          <li><a href="#"><img src="img/brand-bosch.png" alt="Bosch" width="126" height="37"></a></li>
+          <li><a href="#"><img src="img/brand-makita.png" alt="Makita" width="123" height="40"></a></li>
+          <li><a href="#"><img src="img/brand-dewalt.png" alt="DeWALT" width="146" height="44"></a></li>
+          <li><a href="#"><img src="img/brand-interskol.png" alt="Интерскол" width="200" height="88"></a></li>
+          <li><a href="#"><img src="img/brand-hitachi.png" alt="Hitachi" width="169" height="31"></a></li>
+          <li><a href="#"><img src="img/brand-lg.png" alt="LG" width="121" height="73"></a></li>
+          <li><a href="#"><img src="img/brand-aeg.png" alt="AEG" width="151" height="96"></a></li>
+          <li><a href="#"><img src="img/brand-metabo.png" alt="Metabo" width="204" height="69"></a></li>
         </ul>
       </div>
     </section>
