--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,10 @@
     <header>
       <div>
         <a href="index.html"><img src="img/logo.svg" alt="Логотип компании" width="109" height="19"></a>
-        <form>
-          <label for="search">Поиск</label>
-          <input type="search" id="search" placeholder="Поиск:">
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <label class="visually-hidden" for="search">Поиск</label>
+          <input type="search" id="search" name="search" placeholder="Поиск:">
+          <button type="submit">Искать</button>
         </form>
         <a href="#">Закладки: 0</a>
         <a href="#">Корзина: 10</a>
@@ -18,11 +19,11 @@
       </div>
       <div>
         <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p><a href="tel:+78125550555" aria-label="Телефон">+7 (812) 555-05-55</a></p>
+        <p aria-label="Адрес">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <ul>
           <li><a href="#">Равшан Джамшутович</a></li>
-          <li><a href="#">Выход</a></li>
+          <li><a href="#"><span class="visually-hidden">Выход</span></a></li>
           <li><a href="#">Мои заказы</a></li>
           <li><a href="#">Личный кабинет</a></li>
         </ul>
@@ -41,8 +42,8 @@
     </header>
     <main>
       <ul>
-        <li><a href="index.html"><img src="#" alt="Домой">Домой</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="index.html"><span class="visually-hidden">Домой</span></a></li>
+        <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li><a href="#">Перфораторы</a></li>
       </ul>
@@ -50,17 +51,10 @@
       <!-- Ф И Л Ь Т Р -->
       <section>
         <h2>Фильтр</h2>
-        <form>
-          <!--
+        <form action="echo.htmlacademy.ru" method="get">
           <fieldset>
             <legend>Цена:</legend>
-              <div>
-                <input type="text" value="0">
-                -
-                <input type="text" value="30000">
-              </div>
           </fieldset>
-        -->
           <fieldset>
             <legend>Производители:</legend>
             <ul>
@@ -229,7 +223,7 @@
       </section>
     </main>
     <footer>
-      <a href="#"><img src="logo.svg" alt="Логотип компании" width="138" height="23"></a>
+      <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="138" height="23"></a>
       <p>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
       </p>
@@ -254,9 +248,9 @@
         Все права защищены
       </p>
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
       </ul>
       <p>
         Обратная связь:
@@ -267,5 +261,14 @@
         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </p>
     </footer>
+
+    <section>
+      <h2>Товар добавлен в корзину!</h2>
+      <div>
+        <a href="#">Оформить заказ</a>
+        <button type="button">Продолжить покупки</button>
+      </div>
+      <button type="button"><span class="visually-hidden">Закрыть окно</span></button>
+    </section>
   </body>
 </html>
