--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
   <header>
     <div>
-      <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="109" height="19"></a>
-      <form>
-        <label for="search">Поиск</label>
-        <input type="search" id="search" placeholder="Поиск:">
+      <a href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="109" height="19"></a>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <label class="visually-hidden" for="search">Поиск</label>
+        <input type="search" id="search" name="search" placeholder="Поиск:">
+        <button type="submit">Искать</button>
       </form>
       <a href="#">Закладки: 0</a>
       <a href="#">Корзина: 0</a>
@@ -18,8 +19,8 @@
     </div>
     <div>
       <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <p><a href="tel:+78125550555" aria-label="Телефон">+7 (812) 555-05-55</a></p>
+      <p aria-label="Адрес">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       <ul>
         <li><a href="#">Войти</a></li>
         <li><a href="#">Регистрация</a></li>
@@ -38,7 +39,7 @@
     </nav>
   </header>
   <main>
-    <h1>Главная страница магазина Техномарт</h1>
+    <h1 class="visually-hidden">Главная страница магазина Техномарт</h1>
     <!-- П Р О М О Б Л О К -->
     <section>
       <h2>Товары и услуги</h2>
@@ -69,12 +70,12 @@
           <div>
             <h3>Дрели</h3>
             <p>Соседям на радость</p>
-            <a href="#">Открыть каталог</a>
+            <a href="catalog.html">Открыть каталог</a>
           </div>
           <div>
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
-            <a href="#">Открыть каталог</a>
+            <a href="catalog.html">Открыть каталог</a>
           </div>
         </div>
         <div>
@@ -208,12 +209,12 @@
     </section>
     <section>
       <h2>Контакты</h2>
-      <a href="#"><img src="img/map.jpg" alt="Карта проезда" width="300" height="158"></a>
+      <a href="#"><img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="300" height="158"></a>
       <a href="#">Заблудились? Напишите нам!</a>
     </section>
   </main>
   <footer>
-    <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="138" height="23"></a>
+    <a href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
     <p>
       г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
     </p>
@@ -238,9 +239,9 @@
       Все права защищены
     </p>
     <ul>
-      <li><a href="#">Вконтакте</a></li>
-      <li><a href="#">Фейсбук</a></li>
-      <li><a href="#">Инстаграм</a></li>
+      <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+      <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+      <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
     </ul>
     <p>
       Обратная связь:
@@ -251,6 +252,33 @@
       <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
     </p>
   </footer>
+
+  <section>
+    <h2 class="visually-hidden">Форма обратной связи</h2>
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <div>
+        <label for="name">Ваше имя:</label>
+        <input type="text" id="name" name="name"placeholder="Имя Фамилия">
+        <label for="mail">Ваш e-mail:</label>
+        <input type="email" id="mail" name="mail" placeholder="email@example.com">
+      </div>
+      <div>
+        <label for="message">Текст письма:</label>
+        <textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+      </div>
+      <button type="submit">Отправить</button>
+    </form>
+    <button type="button">
+      <span class="visually-hidden">Закрыть</span>
+    </button>
+  </section>
+  <section>
+    <h2 class="visually-hidden">Карта проезда</h2>
+    <img src="img/map-popup.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="940" height="446">
+    <button type="button">
+      <span class="visually-hidden">Закрыть</span>
+    </button>
+  </section>
 </body>
 
 </html>
