--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
     <div>
       <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <p><a href="tel:+78125550555" aria-label="Телефон">+7 (812) 555-05-55</a></p>
-      <p aria-label="Адрес">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       <ul>
         <li><a href="#">Войти</a></li>
         <li><a href="#">Регистрация</a></li>
@@ -42,7 +42,7 @@
     <h1 class="visually-hidden">Главная страница магазина Техномарт</h1>
     <!-- П Р О М О Б Л О К -->
     <section>
-      <h2>Товары и услуги</h2>
+      <h2 class="visually-hidden">Товары и услуги</h2>
       <div>
         <div>New</div>
         <h3>Материалы</h3>
@@ -72,19 +72,19 @@
             <p>Соседям на радость</p>
             <a href="catalog.html">Открыть каталог</a>
           </div>
-          <div>
+          <div class="visually-hidden">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <a href="catalog.html">Открыть каталог</a>
           </div>
         </div>
         <div>
-          <button type="button">Вперед</button>
-          <button type="button">Назад</button>
+          <button type="button"><span class="visually-hidden">Вперед</span></button>
+          <button type="button"><span class="visually-hidden">Назад</span></button>
         </div>
         <div>
-          <button type="button"></button>
-          <button type="button"></button>
+          <button type="button"><span class="visually-hidden">Слайд 1</span></button>
+          <button type="button"><span class="visually-hidden">Слайд 2</span></button>
         </div>
       </div>
     </section>
@@ -100,7 +100,7 @@
           <h3>Перфоратор Bosch BFG 9000</h3>
           <p>32500 Р.</p>
           <p>25500 Р.</p>
-          <div>
+          <div class="visually-hidden">
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -110,7 +110,7 @@
           <h3>Перфоратор Bosch BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
-          <div>
+          <div class="visually-hidden">
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -120,7 +120,7 @@
           <h3>Перфоратор Bosch BFG 6000</h3>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
-          <div>
+          <div class="visually-hidden">
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -129,7 +129,7 @@
           <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 2000</h3>
           <p>12500 Р.</p>
-          <div>
+          <div class="visually-hidden">
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -173,7 +173,7 @@
           Ведь мы неплохо заработаем,
           поднимая его на ваш этаж!</p>
       </div>
-      <div>
+      <div class="visually-hidden">
         <h3>Гарантия</h3>
         <p>Если купленный у нас товар поломается или заискрит,
           а также в случае пожара, спровоцированного его возгоранием,
@@ -181,7 +181,7 @@
           Мы обменяем сгоревший товар на новый.
           Дом уж восстановите как-нибудь сами.</p>
       </div>
-      <div>
+      <div class="visually-hidden">
         <h3>Кредит</h3>
         <p>Залезть в долговую яму стало проще!
           Кредитные консультанты придут вам на помощь.</p>
@@ -258,7 +258,7 @@
     <form action="https://echo.htmlacademy.ru" method="post">
       <div>
         <label for="name">Ваше имя:</label>
-        <input type="text" id="name" name="name"placeholder="Имя Фамилия">
+        <input type="text" id="name" name="name" placeholder="Имя Фамилия">
         <label for="mail">Ваш e-mail:</label>
         <input type="email" id="mail" name="mail" placeholder="email@example.com">
       </div>
