--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
       </div>
       <div>
         <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+        <p><a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a></p>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <ul>
           <li><a href="#">Равшан Джамшутович</a></li>
@@ -239,7 +239,7 @@
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
       </p>
       <p>
-        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
       </p>
       <ul>
         <li><a href="#">Компания</a></li>
