--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <form action="https://echo.htmlacademy.ru" method="post">
         <label class="visually-hidden" for="search">Поиск</label>
         <input type="search" id="search" name="search" placeholder="Поиск:">
-        <button type="submit">Искать</button>
+        <button type="submit"><span class="visually-hidden">Искать</span></button>
       </form>
       <a href="#">Закладки: 0</a>
       <a href="#">Корзина: 0</a>
@@ -19,7 +19,7 @@
     </div>
     <div>
       <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <p><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+      <p><a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a></p>
       <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       <ul>
         <li><a href="#">Войти</a></li>
@@ -72,7 +72,7 @@
             <p>Соседям на радость</p>
             <a href="catalog.html">Открыть каталог</a>
           </div>
-          <div class="visually-hidden">
+          <div>
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <a href="catalog.html">Открыть каталог</a>
@@ -100,7 +100,7 @@
           <h3>Перфоратор Bosch BFG 9000</h3>
           <p>32500 Р.</p>
           <p>25500 Р.</p>
-          <div class="visually-hidden">
+          <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -110,7 +110,7 @@
           <h3>Перфоратор Bosch BFG 3000</h3>
           <p>22500 Р.</p>
           <p>15500 Р.</p>
-          <div class="visually-hidden">
+          <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -120,7 +120,7 @@
           <h3>Перфоратор Bosch BFG 6000</h3>
           <p>30500 Р.</p>
           <p>25500 Р.</p>
-          <div class="visually-hidden">
+          <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -129,7 +129,7 @@
           <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 2000</h3>
           <p>12500 Р.</p>
-          <div class="visually-hidden">
+          <div>
             <a href="#">Купить</a>
             <a href="#">В закладки</a>
           </div>
@@ -173,7 +173,7 @@
           Ведь мы неплохо заработаем,
           поднимая его на ваш этаж!</p>
       </div>
-      <div class="visually-hidden">
+      <div>
         <h3>Гарантия</h3>
         <p>Если купленный у нас товар поломается или заискрит,
           а также в случае пожара, спровоцированного его возгоранием,
@@ -181,7 +181,7 @@
           Мы обменяем сгоревший товар на новый.
           Дом уж восстановите как-нибудь сами.</p>
       </div>
-      <div class="visually-hidden">
+      <div>
         <h3>Кредит</h3>
         <p>Залезть в долговую яму стало проще!
           Кредитные консультанты придут вам на помощь.</p>
@@ -219,7 +219,7 @@
       г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
     </p>
     <p>
-      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
     </p>
     <ul>
       <li><a href="#">Компания</a></li>
